# nicehash_sync

./: .gitignore  README.md  pyproject.toml
nsync/: nsync.py
tests/: test_nsync.py
